--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon insex.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
