--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,16 +12,18 @@
     "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "crypto": "*",
     "express": "*",
     "http": "0.0.1-security",
     "nodemon": "*",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "eslint": "^7.15.0",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1"
   }
 }
