--- a/src/client/package.json
+++ b/src/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "classnames": "^2.2.6",
+    "history": "^5.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^3.0.4",
     "web-vitals": "^0.2.4"
