--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-socket-io": "^0.2.5",
+    "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4",
     "web-vitals": "^0.2.4"
   },
@@ -22,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://127.0.0.1:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
