--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint --fix --ext .js ."
   },
   "dependencies": {
@@ -16,14 +16,15 @@
     "express": "*",
     "http": "0.0.1-security",
     "nodemon": "*",
-    "socket.io": "^2.3.0"
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "socket.io-client": "^3.0.4"
   }
 }
