--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,12 +10,11 @@
     "history": "^5.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-socket-io": "^0.2.5",
-    "socket.io": "^3.0.4",
-    "socket.io-client": "^3.0.4",
+    "socket.io-client": "3.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
