--- a/src/server/package.json
+++ b/src/server/package.json
@@ -26,5 +26,9 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "socket.io-client": "^3.0.4"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["json", "html"]
   }
 }
