--- a/src/server/package.json
+++ b/src/server/package.json
@@ -29,6 +29,9 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["json", "html"]
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   }
 }
