--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "history": "^5.0.0",
     "node-sass": "4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
